[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
reqwest = { version = "0.11.22", features = [ "cookies", "blocking" ] }

[lib]
name = "common"
path = "common.rs"

[[bin]]
name = "day01"
path = "day01.rs"
